...
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Encontre as melhores Cervejarias!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hSi-ma-QFo">
                    <rect key="frame" x="16" y="43" width="273" height="22"/>
                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Busque por local" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3U-ej-sAn">
                    <rect key="frame" x="12" y="75" width="295" height="51"/>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <textInputTraits key="textInputTraits" textContentType="address-level2"/>
                    <scopeButtonTitles>
                        <string>Title</string>
...
